# voxel-dataset-generator

./: .gitignore  DATASET_FORMAT_SPEC.md  INTERACTIVE_VIZ_SUMMARY.md  NEURAL_RENDERING_DATASET.md  OPTIX_INTEGRATION.md  README.md  README.md.bak  SETUP_NEURAL_RENDERING.md  SPECIFICATION.md  SPLITTING.md  VISUALIZATION.md  compare-upsample-voxelize.ipynb  pyproject.toml  setup_modern_gpu.sh  setup_p100.sh  visualize_dataset.ipynb  voxel-light-transport-spec.md  voxel_gen.py
examples/: OPTIMAL_TRANSPORT_MORPHING.md  QUICK_REFERENCE.md  README.md  analyze_dataset.py  basic_usage.py  benchmark_dataloader.py  benchmark_dataset.py  dataset_usage_example.py  example_with_splits.py  generate_light_transport_dataset.py  generate_morphing_batch.py  generate_single_light_transport.py  optimal_transport_morphing.py  process_from_arrays.py  quick_timing_test.py  render_light_transport.py  sparse_voxel_example.py  train_neural_rendering.py  visualize_light_transport.py  visualize_light_transport_3d.py  visualize_morphing.py
optix_raytracer/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONCEPT.md  INDEX.md  INSTALL.md  QUICKSTART.md  README.md  README_INSTALL.md  SUMMARY.md  build.sh  install.sh  pyproject.toml  setup.py
optix_raytracer/cuda/: voxel_programs.cu
optix_raytracer/examples/: basic_tracing.py  batch_process.py  generate_dataset.py  generate_hierarchical_dataset.py  render_dataset.py
optix_raytracer/include/: optix_setup.h  voxel_common.h  voxel_tracer.h
optix_raytracer/python/: bindings.cpp
optix_raytracer/src/: optix_function_table.cpp  optix_setup.cpp  voxel_tracer.cpp
src/voxel_dataset_generator/: __init__.py  pipeline.py
src/voxel_dataset_generator/datasets/: __init__.py  neural_rendering_dataset.py  sparse_utils.py  transforms.py
src/voxel_dataset_generator/deduplication/: __init__.py  registry.py
src/voxel_dataset_generator/light_transport/: __init__.py  boundary_patches.py  metal_tracer.py  monte_carlo.py  optical_properties.py  spherical_harmonics.py  transfer_matrix.py
src/voxel_dataset_generator/light_transport/kernels/: __init__.py  sources.py
src/voxel_dataset_generator/splitting/: __init__.py  splitter.py
src/voxel_dataset_generator/subdivision/: __init__.py  subdivider.py
src/voxel_dataset_generator/utils/: __init__.py  config.py  metadata.py
src/voxel_dataset_generator/voxelization/: __init__.py  voxelizer.py
tests/: test_basic.py  test_light_transport.py  test_splitter_standalone.py
