[project]
name = "voxel-dataset-generator"
version = "0.1.0"
description = "Hierarchical voxel dataset generator for neural rendering research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "polars>=1.34.0",
    "scipy>=1.16.3",
    "thingi10k>=1.3.0",
    "trimesh>=4.9.0",
    "tqdm>=4.67.0",
    "plotly>=6.3.1",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.0.0",
    "anywidget>=0.9.0",
]

[project.scripts]
voxel-gen = "voxel_dataset_generator.pipeline:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
