[project]
name = "voxel-dataset-generator"
version = "0.1.0"
description = "Hierarchical voxel dataset generator for neural rendering research"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.24.0,<2.0",
    "polars>=1.34.0",
    "scipy>=1.16.3",
    "thingi10k>=1.3.0",
    "trimesh>=4.9.0",
    "tqdm>=4.67.0",
    "plotly>=6.3.1",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "pot>=0.9.6.post1",
    "numba>=0.63.1",
    "mlx>=0.30.1",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.0.0",
    "anywidget>=0.9.0",
]
# Neural rendering dependencies
# For P100 (CUDA 6.0): use torch 2.0.x
# For modern GPUs (V100+): use torch>=2.4.0
neural-rendering = [
    "torch>=2.0.0,<2.1.0",
    "torchvision>=0.15.0,<0.16.0",
    "psutil>=5.9.0",
]
# Light transport simulation on Apple Silicon
light-transport = [
    "mlx>=0.20.0",
    "numba>=0.60.0",
]
# Light transport with CPU fallback only (no MLX)
light-transport-cpu = [
    "numba>=0.60.0",
]

[project.scripts]
voxel-gen = "voxel_dataset_generator.pipeline:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
